src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Pardot_Academic_Program__c</fullName>
        <description>Used for segmentation in Pardot. Populated by Process Builder. Can be hidden from page layouts.

This field is the plain text name of the related Academic_Program__c</description>
        <label>Pardot Academic Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_Academic_Term__c</fullName>
        <description>Used for segmentation in Pardot. Populated by Process Builder. Can be hidden from page layouts.

This field is the plain text name of the related Academic_Term__c</description>
        <label>Pardot Academic Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proof_of_Qualification_Received__c</fullName>
        <label>Proof of Qualification Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prospect_Status__c</fullName>
        <label>Prospect Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pursue_ONU__c</fullName>
        <label>Pursue ONU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ready_for_Schedule__c</fullName>
        <label>Ready for Schedule</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recruit_GUID__c</fullName>
        <externalId>true</externalId>
        <label>Recruit GUID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Recruit_Inquiry_Source__c</fullName>
        <description>This field is migrated from Recruit&apos;s &quot;What Prompted you to inquire today?&quot; field.</description>
        <label>Prompt to Inquire Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online Search</fullName>
                </value>
                <value>
                    <fullName>Online Ad</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Local Resident</fullName>
                </value>
                <value>
                    <fullName>Walk-in</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Pandora</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>ONU Rep / Recruiter</fullName>
                </value>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>Employer Partnership</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruit_Outside_Recruiter__c</fullName>
        <description>This field is migrated from Recruit&apos;s &quot;Outside Recruiter&quot; field and is used to credit Outside Recruiters for a lead.</description>
        <label>Outside Recruiter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The marketable name for an official Academic Program (or group of Programs) that the individual is interested in. A lookup to Program with a filter criteria of Record Type = Recruitment Program. Used in building the Opportunity Key for the Interaction Processor to determine whether to create a new Opportunity or update an existing Opportunity for a decentralized recruitment process.</description>
        <inlineHelpText>The marketable name for an official Academic Program (or group of Programs) that the individual is interested in.</inlineHelpText>
        <label>Recruitment Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Recruitment Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Opportunities with Recruitment Program</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Red_Flag_Notes__c</fullName>
        <label>Red Flag Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Red_Flag_Removed__c</fullName>
        <label>Red Flag Removed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Red_Flagged__c</fullName>
        <label>Red Flagged</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Review_Opportunity__c</fullName>
        <label>Review Opportunity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Schedule_Approved_by_Student__c</fullName>
        <label>Schedule Approved by Student</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Schedule_Sent__c</fullName>
        <label>Schedule Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Started__c</fullName>
        <label>Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status_picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Pick One (Default)</fullName>
                </value>
                <value>
                    <fullName>Chose Another University</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Multiple Programs Chosen</fullName>
                </value>
                <value>
                    <fullName>No Contact</fullName>
                </value>
                <value>
                    <fullName>No Longer Interested</fullName>
                </value>
                <value>
                    <fullName>Non-Start</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Program Not Offered</fullName>
                </value>
                <value>
                    <fullName>Traditional Student</fullName>
                </value>
                <value>
                    <fullName>Fake/Invaid Information</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Rolled</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Needs Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Converts royally f*cked up Multiple Sales Processes and Stages into something a normal person can read.  Because if you create a Report and the people looking at it need a piece of paper and a pencil, or a calculator to figure out what that Report means, you built a shitty Report.  And you don&apos;t wanna build shitty Reports, because you&apos;re an Awesome Admin</description>
        <formula>IF(IsClosed = FALSE, &quot;Open&quot;,
IF(IsWon = TRUE , &quot;Won&quot;,
&quot;Lost&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pwned!</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_picklist__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Accounts_Coordinator__c</fullName>
        <label>Student Accounts Coordinator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Danette Guest</fullName>
                </value>
                <value>
                    <fullName>Ian Cole</fullName>
                </value>
                <value>
                    <fullName>Jamie Griffin</fullName>
                </value>
                <value>
                    <fullName>Nancy Coghlan</fullName>
                </value>
                <value>
                    <fullName>Maurice Hutton</fullName>
                </value>
                <value>
                    <fullName>Valerie Burns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Accounts_Phone_Number__c</fullName>
        <label>Student Accounts Phone Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>815-928-5615</fullName>
                </value>
                <value>
                    <fullName>815-939-5157</fullName>
                </value>
                <value>
                    <fullName>815-939-5018</fullName>
                </value>
                <value>
                    <fullName>815-939-5019</fullName>
                </value>
                <value>
                    <fullName>815-939-5004</fullName>
                </value>
                <value>
                    <fullName>815-939-5154</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <label>Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEACH_Grant_Agreement_to_Serve__c</fullName>
        <label>TEACH Grant Agreement to Serve</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEACH_Grant_Entrance_Counseling__c</fullName>
        <label>TEACH Grant Entrance Counseling</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TIL_Received__c</fullName>
        <label>TIL Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TIL_Sent__c</fullName>
        <label>TIL Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title_IV_Received__c</fullName>
        <label>Title IV Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Plan_Length__c</fullName>
        <label>Total Monthly Plan Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_1_Gap__c</fullName>
        <label>Year 1 Gap</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Year_2_Gap__c</fullName>
        <label>Year 2 Gap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_3_Gap__c</fullName>
        <label>Year 3 Gap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Enrolled</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Applicant_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Applicant_Opportunity</value>
        </filters>
        <label>Applicant Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Inquiry_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Inquiry_Opportunity</value>
        </filters>
        <label>Inquiry Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Advancement</fullName>
        <active>true</active>
        <businessProcess>Advancement</businessProcess>
        <description>For advancement staff&apos;s use</description>
        <label>Advancement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Applicant_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Applicant</businessProcess>
        <label>Applicant Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Corporate_Engagement</fullName>
        <active>true</active>
        <businessProcess>Advancement</businessProcess>
        <description>For corporate engagement staff&apos;s use</description>
        <label>Corporate Engagement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inquiry_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Inquiry</businessProcess>
        <label>Inquiry Opportunity</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>